--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </div>
 
     <div class="sorter">
-        <img src="src/assets/defaultL.jpg" class="left sort image">
+        <img src="src/assets/MyGo_Bandori.jpg" class="left sort image">
 
-        <div class="starting start button">Touhou Project Character Sorter<br><br>Click to Start!</div>
+        <div class="starting start button">Mygo Project Character Sorter<br><br>Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
 
         <div class="loading button"><div></div><span>Loading...</span></div>
@@ -46,7 +46,7 @@
         <div class="finished getimg button">Generate Image</div>
         <div class="finished list button">Generate Text List</div>
 
-        <img src="src/assets/defaultR.jpg" class="right sort image">
+        <img src="src/assets/Ave_Mujica_Bandori.jpg" class="right sort image">
 
         <div class="left sort text"><p></p></div>
         <div class="right sort text"><p></p></div>
