--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="sorter">
-        <img src="src/assets/MyGo_Bandori.jpg" class="left sort image">
+        <img src="src/assets/MyGo_Bandori.png" class="left sort image">
 
         <div class="starting start button">Mygo Project Character Sorter<br><br>Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
