--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </div>
 
     <div class="sorter">
-        <div class="starting start button">Mygo Project Character Sorter<br><br>Click to Start!</div>
+        <img src="src/assets/defaultL.jpg" class="left sort image">
+        <div class="starting start button">Mygo Character Sorter<br><br>Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
 
         <div class="loading button"><div></div><span>Loading...</span></div>
@@ -43,7 +44,7 @@
         <div class="finished save button">Generate Result URL</div>
         <div class="finished getimg button">Generate Image</div>
         <div class="finished list button">Generate Text List</div>
-
+        <img src="src/assets/defaultR.jpg" class="right sort image">
         <div class="left sort text"><p></p></div>
         <div class="right sort text"><p></p></div>
     </div>
