--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
     </div>
 
     <div class="sorter">
-        <h1>MyGo Character Sorter</h1>
         <img src="src/assets/defaultL.jpg" class="left sort image">
         <div class="starting start button">Click here to Start!</div>
-        <div class="starting load button">Load <span></span></div>
+        <div class="starting load button">Load</div>
 
         <div class="loading button"><div></div><span>Loading...</span></div>
 
