--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         <br><br>
 
         <p>Sorter for Mygo characters. Pick your sources, and hit the Start button.</p>
+        <br>
+        <p>If you can not resort the characters, click clear save data and refresh your webpage again</p>
 
         <br><br>
 
