--- a/index.html
+++ b/index.html
@@ -55,13 +55,11 @@
     <div class="results"></div>
 
     <div class="info">
-        <a class="clearsave">Clear Save Data</a>
         
-        <br><br>
+        <br>
 
         <p>Sorter for Mygo characters. Pick your sources, and hit the Start button.</p>
-        <br>
-        <p>If you can not sort the characters, click clear save data and refresh your webpage. when Filter by band is visible you should be able to redo it.</p>
+        <p>If you can not sort the characters, click <a class="clearsave">Clear Save Data</a> and refresh your webpage. when Filter by band is visible you should be able to redo it.</p>
 
         <br><br>
 
