--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <br>
 
         <p>Sorter for Mygo characters. Pick your sources, and hit the Start button.</p>
-        <p>If you can not sort the characters, click <a class="clearsave">Clear Save Data</a> and refresh your webpage. when Filter by band is visible you should be able to redo it.</p>
+        <p><b>If you can not sort the characters, click <a class="clearsave">Clear Save Data</a> and refresh your webpage. when Filter by band is visible you should be able to redo it.</b></p>
 
         <br><br>
 
