--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <br><br>
 
         <p>Inspired by Touhou Character Source</p>
-
+        <p>Images from https://bandori.fandom.com/wiki/MyGO!!!!!</p>
         <br><br>
 
     </div>
